tests/test54.rael.exp
Error [1:7]: Expected expression
| log 1,
|       ^
